rbx_xml/src/tests/snapshots/rbx_xml__tests__package-link__roundtrip.snap
---
source: rbx_xml/src/tests/mod.rs
expression: "DomViewer::new().view_children(&roundtrip)"
---
- referent: referent-0
  name: Model
  class: Model
  properties:
    Attributes:
      Attributes: {}
    LevelOfDetail:
      Enum: 0
    PrimaryPart: "null"
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    WorldPivotData:
      OptionalCFrame: ~
  children:
    - referent: referent-1
      name: PackageLink
      class: PackageLink
      properties:
        Attributes:
          Attributes: {}
        AutoUpdate:
          Bool: false
        PackageId:
          ContentId: "rbxassetid://9111823334"
        SourceAssetId:
          Int64: -1
        Tags:
          Tags: []
      children: []
